--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "echo \"No build specified\" && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.server.js"
+    "start": "node ./src/index.js"
   },
   "author": "",
   "license": "ISC",
