--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/suhashebbar13/Roguegears-Backend.git"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
