--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "echo \"No build specified\" && exit 1",
+    "build": "echo build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js"
   },
